syntax = "proto3";

// 指定等会文件生成出来的package
package api;

// 定义request
message VoteRequest {
    int32 term = 1;
    string nodeId = 2;
}
// 定义response
message Response {
    int32 code = 1;
    string msg = 2;
}

message VoteResponse {
    Response rsp = 1;
    bool result = 2;
}
message LeaderRequest {
    int32 term = 1;
    string nodeId = 2;
}

message HeartbeatRequest {
    int32 term = 1;
    string nodeId = 2;
}

message FetchEntryRequest {
    int32 term = 1;
    int64 lastId = 3;
}
message Entry {
    int32 term = 1;
    bytes key = 2;
    bytes value = 3;
    int64 lastId = 4;
}


message FetchEntryResponse {
    Response rsp = 1;
    repeated Entry entries=2;
}
message CommitEntryReq{
    int32 term = 1;
    int64 entry_id = 2;
}

// 定义服务主体
service ApiService {
    // 定义方法
    rpc Vote (VoteRequest) returns (VoteResponse);
    // 定义方法
    rpc Leader (LeaderRequest) returns (Response);

    rpc Heartbeat (HeartbeatRequest) returns (Response);

    rpc FetchEntries (FetchEntryRequest) returns (FetchEntryResponse);

    rpc SendEntry (Entry) returns (Response);

    rpc CommitEntry (CommitEntryReq) returns (Response);
}